--- a/wj/pom.xml
+++ b/wj/pom.xml
@@ -122,6 +122,18 @@
 			<artifactId>java-jwt</artifactId>
 			<version>3.8.3</version>
 		</dependency>
+		<!-- swagger -->
+		<dependency>
+			<groupId>io.springfox</groupId>
+			<artifactId>springfox-swagger2</artifactId>
+			<version>2.5.0</version>
+		</dependency>
+		<!-- swagger-ui -->
+		<dependency>
+			<groupId>io.springfox</groupId>
+			<artifactId>springfox-swagger-ui</artifactId>
+			<version>2.5.0</version>
+		</dependency>
 	</dependencies>
 	<properties>
 		<java.version>1.8</java.version>
