--- a/wj/src/main/resources/application.properties
+++ b/wj/src/main/resources/application.properties
@@ -3,7 +3,10 @@ spring.datasource.url=jdbc:mysql://localhost:3306/booksys?characterEncoding=UTF-
 spring.datasource.username=root
 spring.datasource.password=root
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
-spring.jpa.hibernate.ddl-auto = none
+
+
+mybatis.mapper-locations=classpath:mappers/*Mapper.xml
+
 
 
 spring.mvc.static-path-pattern=/**
