--- a/wj/pom.xml
+++ b/wj/pom.xml
@@ -144,10 +144,54 @@
 			<artifactId>druid-spring-boot-starter</artifactId>
 			<version>1.1.1</version>
 		</dependency>
+		<!--<dependency>
+			<groupId>org.bytedeco</groupId>
+			<artifactId>javacv-platform</artifactId>
+			<version>1.5.2</version>
+		</dependency>
+		<dependency>
+			<groupId>com.madgag</groupId>
+			<artifactId>animated-gif-lib</artifactId>
+			<version>1.4</version>
+		</dependency>-->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-data-redis</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>redis.clients</groupId>
+			<artifactId>jedis</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>commons-logging</groupId>
+			<artifactId>commons-logging</artifactId>
+			<version>1.1.1</version>
+		</dependency>
+
+		<dependency>
+			<groupId>commons-codec</groupId>
+			<artifactId>commons-codec</artifactId>
+			<version>1.4</version>
+		</dependency>
+
+		<dependency>
+			<groupId>commons-httpclient</groupId>
+			<artifactId>commons-httpclient</artifactId>
+			<version>3.0.1</version>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-configuration-processor</artifactId>
+			<optional>true</optional>
+		</dependency>
 	</dependencies>
+
+
 	<properties>
 		<java.version>1.8</java.version>
 	</properties>
+
+
 	<build>
 		<plugins>
 			<plugin>
@@ -175,6 +219,8 @@
 						<artifactId>mybatis-generator-core</artifactId>
 						<version>1.3.7</version>
 					</dependency>
+
+
 				</dependencies>
 			</plugin>
 		</plugins>
