--- a/wj/pom.xml
+++ b/wj/pom.xml
@@ -4,7 +4,7 @@
 	<artifactId>wj</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>wj</name>
-	<description>White Jotter - Your Mind Palace</description>
+	<description>bookAndNotes System</description>
 	<packaging>jar</packaging>
 	<parent>
 		<groupId>org.springframework.boot</groupId>
@@ -183,6 +183,10 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-configuration-processor</artifactId>
 			<optional>true</optional>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-web-services</artifactId>
 		</dependency>
 	</dependencies>
 
